feat: update header(search_box), container(news)

--- a/naver_main.html
+++ b/naver_main.html
@@ -8,14 +8,69 @@
 <link rel="stylesheet" href="naver.css">
 <body>
     <div class="header">
-        <div class="search_box">search_box</div>
+        <div class="search_box">
+
+            <div style="display: flex; flex-direction:row; justify-content:space-between">
+                <div id="left_element">
+                    <div class="element" id="shortcuts">shourtcuts</div>
+                    <div class="element" id="naver_pay">naver_pay</div>
+                </div>
+                <div id="right_element">
+                    <div class="element" id="naver_talk">naver_talk</div>
+                    <div class="element" id="alarm">alarm</div>
+                </div>
+            </div>
+
+            <div id="search_form">
+                <div id="naver_icon">naver_icon</div>
+                <div id="input_form">input_form</div>
+                <div id="keyboard_img">k_img</div>
+                <div id="reading_glass">reading_glass</div>
+            </div>            
+        </div>
         <div class="icons">icons</div>
     </div>
-
+    <div class="advertisement">
+        advertisement
+    </div>
     <div class="container">
         <div class="content">
             <div class="top">
-                <div class="news">news</div>
+                <div class="news">
+                    <div id="header_view">
+                        <div id="list">                            
+                            <ul>
+                                <li>1</li>
+                                <li>2</li>
+                                <li>3</li>
+                                <li>4</li>
+                                <li>5</li>
+                            </ul>
+                        </div>
+                        <div id="link">
+                            asian cup
+                        </div>
+                    </div>
+                    <div id="header_subview">
+                        <div id="list_box">list_box</div>
+                        <div id="sub_news">sub_news</div>
+                        <div id="news_home_btn">news_home_btn</div>
+                    </div>
+                    <div id="media_view">
+                        media_view
+                    </div>
+                    <div id="paging_view">
+                        <div id="page_lt_rt">
+                            <div id="page_lt"><</div>
+                            <div id="page">page</div>
+                            <div id="page_rt">></div>
+                        </div>
+                        <div id="btn">
+                            <div id="btn_list">btn_list</div>
+                            <div id="btn_thumb">btn_thumb</div>
+                        </div>
+                    </div>
+                </div>
                 <div class="shopping">shopping</div>
             </div>
             <div class="bottom">
@@ -26,7 +81,9 @@
         <div class="aside">
             <div class="top">
                 <div class="login">login</div>
+                <div class="sub_adv">sub_adv</div>
                 <div class="weather">weather</div>
+                <div class="stock">stock</div>
             </div>
             <div class="bottom">
                 <div class="widget">widget</div>            
