feat : create footer

--- a/naver_main.html
+++ b/naver_main.html
@@ -1,98 +1,195 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<link rel="stylesheet" href="naver.css">
-<body>
-    <div class="header">
-        <div class="search_box">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <link rel="stylesheet" href="naver.css" />
+    <body>
+        <div class="header">
+            <div class="search_box">
+                <div style="display: flex; flex-direction: row; justify-content: space-between">
+                    <div id="left_element">
+                        <div class="element" id="shortcuts">shourtcuts</div>
+                        <div class="element" id="naver_pay">naver_pay</div>
+                    </div>
+                    <div id="right_element">
+                        <div class="element" id="naver_talk">naver_talk</div>
+                        <div class="element" id="alarm">alarm</div>
+                    </div>
+                </div>
 
-            <div style="display: flex; flex-direction:row; justify-content:space-between">
-                <div id="left_element">
-                    <div class="element" id="shortcuts">shourtcuts</div>
-                    <div class="element" id="naver_pay">naver_pay</div>
-                </div>
-                <div id="right_element">
-                    <div class="element" id="naver_talk">naver_talk</div>
-                    <div class="element" id="alarm">alarm</div>
+                <div id="search_form">
+                    <div id="naver_icon">naver_icon</div>
+                    <div id="input_form">input_form</div>
+                    <div id="keyboard_img">k_img</div>
+                    <div id="reading_glass">reading_glass</div>
                 </div>
             </div>
+            <div class="icons">icons</div>
+        </div>
+        <div class="advertisement">advertisement</div>
+        <div class="container">
+            <div class="content">
+                <div class="top">
+                    <div class="news">
+                        <div id="header_view">
+                            <div id="list">
+                                <ul>
+                                    <li>1</li>
+                                    <li>2</li>
+                                    <li>3</li>
+                                    <li>4</li>
+                                    <li>5</li>
+                                </ul>
+                            </div>
+                            <div id="link">asian cup</div>
+                        </div>
+                        <div id="header_subview">
+                            <div id="list_box">list_box</div>
+                            <div id="sub_news">sub_news</div>
+                            <div id="news_home_btn">news_home_btn</div>
+                        </div>
+                        <div id="media_view">media_view</div>
+                        <div id="paging_view">
+                            <div id="page_lt_rt">
+                                <div id="page_lt"><</div>
+                                <div id="page">page</div>
+                                <div id="page_rt">></div>
+                            </div>
+                            <div id="btn">
+                                <div id="btn_list">btn_list</div>
+                                <div id="btn_thumb">btn_thumb</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shopping">shopping</div>
+                </div>
+                <div class="bottom">
+                    <div class="subscribe">subscribe</div>
+                    <div class="clip">clip</div>
+                </div>
+            </div>
+            <div class="aside">
+                <div class="top">
+                    <div class="login">login</div>
+                    <div class="sub_adv">sub_adv</div>
+                    <div class="weather">weather</div>
+                    <div class="stock">stock</div>
+                </div>
+                <div class="bottom">
+                    <div class="widget">widget</div>
+                </div>
+            </div>
+        </div>
 
-            <div id="search_form">
-                <div id="naver_icon">naver_icon</div>
-                <div id="input_form">input_form</div>
-                <div id="keyboard_img">k_img</div>
-                <div id="reading_glass">reading_glass</div>
-            </div>            
-        </div>
-        <div class="icons">icons</div>
-    </div>
-    <div class="advertisement">
-        advertisement
-    </div>
-    <div class="container">
-        <div class="content">
-            <div class="top">
-                <div class="news">
-                    <div id="header_view">
-                        <div id="list">                            
-                            <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                                <li>4</li>
-                                <li>5</li>
-                            </ul>
+        <br /><br /><br /><br /><br /><br /><br /><br />
+        <!-- footer 작업 -->
+        <div class="footer" style="flex-wrap: wrap; background-color: rgb(245, 246, 247)">
+            <div class="footer_top">
+                <a class="ad1" href="https://store.meritzfire.com/pet/product.do#!/contractPopup">
+                    <img src="source/mertiz.jpg" alt="" />
+                    <p>
+                        메리츠 화재 <br /><br />
+                        <b
+                            >펫보험 페퍼민트 다이렉트 <br />자주아픈 우리집 막내를 위해 <br />펫퍼민트 보험료
+                            확인해요!</b
+                        >
+                    </p>
+                </a>
+                <a class="ad1" href="https://store.meritzfire.com/pet/product.do#!/contractPopup">
+                    <img src="source/mertiz.jpg" alt="" />
+                    <p>
+                        메리츠 화재 <br /><br />
+                        <b
+                            >펫보험 페퍼민트 다이렉트 <br />자주아픈 우리집 막내를 위해 <br />펫퍼민트 보험료
+                            확인해요!</b
+                        >
+                    </p>
+                </a>
+                <a class="ad1" href="https://store.meritzfire.com/pet/product.do#!/contractPopup">
+                    <img src="source/mertiz.jpg" alt="" />
+                    <p>
+                        메리츠 화재 <br /><br />
+                        <b
+                            >펫보험 페퍼민트 다이렉트 <br />자주아픈 우리집 막내를 위해 <br />펫퍼민트 보험료
+                            확인해요!</b
+                        >
+                    </p>
+                </a>
+            </div>
+            <hr />
+
+            <div class="footer_center">
+                <br />
+                <a class="left-box" href="https://www.naver.com/NOTICE">공지사항</a>
+                <a class="right-box" href="https://www.naver.com/more.html">서비스 전체보기</a>
+
+                <br /><br />
+                <hr />
+                <br />
+                <div style="float: left">
+                    <b>Partners </b>
+                    <a href="https://www.navercorp.com/esg/projectFlower"> 프로젝트 꽃 </a> |
+                    <a href="https://business.naver.com/">네이버 비즈니스</a> |
+                    <a href="https://bizschool.naver.com/">네이버 비즈니스 스쿨</a> |
+                    <a href="https://www.navercorp.com/service/serviceAD">네이버 광고</a> |
+                    <a href="https://sell.storefarm.naver.com/#/home/about">스토어 개설</a> |
+                    <a href="https://smartplace.naver.com/">지역업체 등록</a> |
+                    <a href="https://expert.naver.com/expert/introduction?tab=guide#join">엑스퍼트 등록</a>
+                    <br />
+                    <br />
+
+                    <b>Developers</b>
+                    <a href="https://developers.naver.com/"> 네이버 개발자 센터 </a> |
+                    <a href="https://developers.naver.com/docs/common/openapiguide/#/apilist.md"> 오픈 API </a> |
+                    <a href="https://naver.github.io/"> 오픈 소스 </a> |
+                    <a href="https://d2.naver.com/"> 네이버 D2 </a> | <a href="http://d2startup.com/">네이버 D2SF </a> |
+                    <a href="https://www.naverlabs.com/">네이버 랩스 </a> |
+                </div>
+                <div class="right-box" style="display: flex; flex-direction: row">
+                    <div class="broswer_box">
+                        <div class="left-box">
+                            <p>웨일 브라우저</p>
+                            <br />
+                            <a href="http://whale.naver.com/">이용안내</a>
                         </div>
-                        <div id="link">
-                            asian cup
-                        </div>
+
+                        <a class="right-box" href="http://whale.naver.com/"
+                            ><img width="50px" height="50px" src="source/whale broswer.png" alt=""
+                        /></a>
                     </div>
-                    <div id="header_subview">
-                        <div id="list_box">list_box</div>
-                        <div id="sub_news">sub_news</div>
-                        <div id="news_home_btn">news_home_btn</div>
-                    </div>
-                    <div id="media_view">
-                        media_view
-                    </div>
-                    <div id="paging_view">
-                        <div id="page_lt_rt">
-                            <div id="page_lt"><</div>
-                            <div id="page">page</div>
-                            <div id="page_rt">></div>
+                    <br />
+                    <div class="broswer_box">
+                        <div class="left-box">
+                            <p>기업 사이트</p>
+                            <br />
+                            <a href="http://whale.naver.com/">바로가기</a>
                         </div>
-                        <div id="btn">
-                            <div id="btn_list">btn_list</div>
-                            <div id="btn_thumb">btn_thumb</div>
-                        </div>
+
+                        <a class="right-box" href="http://whale.naver.com/"
+                            ><img width="50px" height="50px" src="source/naver_coportation.png" alt=""
+                        /></a>
                     </div>
                 </div>
-                <div class="shopping">shopping</div>
             </div>
-            <div class="bottom">
-                <div class="subscribe">subscribe</div>
-                <div class="clip">clip</div>
+            <br />
+            <br /><br /><br /><br />
+            <br />
+            <hr />
+            <br />
+            <div style="text-align: center" class="footer_bottom">
+                <a href="https://www.navercorp.com/esg/projectFlower"> 회사소개 </a> |
+                <a href="https://business.naver.com/">인재 채용</a> |
+                <a href="https://bizschool.naver.com/">제휴 제안</a> |
+                <a href="https://www.navercorp.com/service/serviceAD">이용약관</a> |
+                <a href="https://sell.storefarm.naver.com/#/home/about"><b>개인정보처리방침</b></a> |
+                <a href="https://smartplace.naver.com/">청소년 보호정책</a> |
+                <a href="https://expert.naver.com/expert/introduction?tab=guide#join">네이버 정책</a>
+                <a href="https://expert.naver.com/expert/introduction?tab=guide#join">고객센터</a>
+                <a href="https://expert.naver.com/expert/introduction?tab=guide#join">ⓒ <b>NAVER Corp.</b></a>
             </div>
         </div>
-        <div class="aside">
-            <div class="top">
-                <div class="login">login</div>
-                <div class="sub_adv">sub_adv</div>
-                <div class="weather">weather</div>
-                <div class="stock">stock</div>
-            </div>
-            <div class="bottom">
-                <div class="widget">widget</div>            
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <div class="top">top</div>
-        <div class="bottom">bottom</div>
-    </div>
-</body>
+    </body>
 </html>
