feat: update container img

--- a/naver_main.html
+++ b/naver_main.html
@@ -31,7 +31,7 @@
         <div class="icons">icons</div>
     </div>
     <div class="advertisement">
-        advertisement
+        <img id="c_adv_img"src="https://github.com/717276/Naver_Front/raw/main/img/news_img/container_adv.png" alt="container_">
     </div>
     <div class="container">
         <div class="content">
@@ -40,34 +40,60 @@
                     <div id="header_view">
                         <div id="list">                            
                             <ul>
-                                <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                                <li>4</li>
-                                <li>5</li>
+                                <li>
+                                    <a href="">뉴스 스탠드</a>
+                                </li>
+                                <li>
+                                    <a href="">언론사 편집</a>
+                                </li>
+                                <li>
+                                    <a href="">엔터</a>
+                                </li>
+                                <li>
+                                    <a href="">스포츠</a>
+                                </li>
+                                <li>
+                                    <a href="">경제</a>
+                                </li>
                             </ul>
                         </div>
                         <div id="link">
-                            asian cup
+                            <a href="" alt="asian_cup">
+                                <img id="asian_cup_img" src="https://github.com/717276/Naver_Front/raw/main/img/news_img/asian_cup.png" alt="asian_cup_img">
+                            </a> 
                         </div>
                     </div>
                     <div id="header_subview">
-                        <div id="list_box">list_box</div>
-                        <div id="sub_news">sub_news</div>
-                        <div id="news_home_btn">news_home_btn</div>
+                        <div id="list_box" style="width: 10%;">
+                            <select name="subview_list_box">
+                                <option disabled selected>분야별 뉴스</option>                                                                
+                            </select>
+                        </div>
+                        <div id="sub_news" style="width: 80%;">
+                            <img id="sub_news_img" src="https://github.com/717276/Naver_Front/raw/main/img/news_img/sub_news.png" alt="sub_news_img">
+                        </div>
+                        <div id="news_home_btn" style="width: 10%;">
+                            <button>뉴스 홈</button>
+                        </div>
                     </div>
                     <div id="media_view">
-                        media_view
+                        <img id="media_view_img" src="https://github.com/717276/Naver_Front/raw/main/img/news_img/media_view.png" alt="media_view">
                     </div>
                     <div id="paging_view">
                         <div id="page_lt_rt">
-                            <div id="page_lt"><</div>
-                            <div id="page">page</div>
-                            <div id="page_rt">></div>
+                            <div id="page_lt">
+                                <a href="" style="padding-right:10px">&lt;</a>
+                            </div>
+                            <div id="page">언론사 더보기</div>
+                            <a href="" style="padding-left:10px">&gt;</a>
                         </div>
                         <div id="btn">
-                            <div id="btn_list">btn_list</div>
-                            <div id="btn_thumb">btn_thumb</div>
+                            <a href="" alt="btn_list">
+                                <img id="btn_list_img" src="https://github.com/717276/Naver_Front/raw/main/img/news_img/btn_list.png" alt="btn_list_img">
+                            </a>
+                            <a href="" alt="btn_thumb">
+                                <img id="btn_thumb_img" src="https://github.com/717276/Naver_Front/raw/main/img/news_img/btn_thumb.png" alt="btn_thumb_img">
+                            </a>                            
                         </div>
                     </div>
                 </div>
