feat : update search_box

--- a/naver_main.html
+++ b/naver_main.html
@@ -12,29 +12,45 @@
 
             <div style="display: flex; flex-direction:row; justify-content:space-between">
                 <div id="left_element">
-                    <div class="element" id="shortcuts">shourtcuts</div>
-                    <div class="element" id="naver_pay">naver_pay</div>
+                    <div class="element" id="shortcuts">
+                        <img src="https://github.com/717276/Naver_Front/raw/main/img/header/%EB%8D%94%EB%B3%B4%EA%B8%B0.png" alt="">
+                    </div>
+                    <div class="element" id="naver_pay">
+                        <img src="https://github.com/717276/Naver_Front/raw/main/img/header/pay.png" alt="">
+                    </div>
                 </div>
                 <div id="right_element">
-                    <div class="element" id="naver_talk">naver_talk</div>
-                    <div class="element" id="alarm">alarm</div>
+                    <div class="element" id="naver_talk">
+                        <img src="https://github.com/717276/Naver_Front/raw/main/img/header/naver_talk.png" alt="">
+                    </div>
+                    <div class="element" id="alarm" style="margin-top:5px;">
+                        <img src="https://github.com/717276/Naver_Front/raw/main/img/header/alarm.png" alt="">
+                    </div>
                 </div>
             </div>
 
             <div id="search_form">
-                <div id="naver_icon">naver_icon</div>
-                <div id="input_form">input_form</div>
-                <div id="keyboard_img">k_img</div>
-                <div id="reading_glass">reading_glass</div>
+                <div id="naver_icon">
+                    <img src="https://github.com/717276/Naver_Front/raw/main/img/header/naver.png" alt="">
+                </div>
+                <div id="input_form">
+                    <input id="input" type="text" placeholder="검색어 입력">
+                </div>
+                <div id="keyboard_img">
+                    <img src="https://github.com/717276/Naver_Front/raw/main/img/header/keyboard_icon.png" alt="">
+                </div>
+                <div id="reading_glass">
+                    <img src="https://github.com/717276/Naver_Front/raw/main/img/header/reading_glass.png" alt="">
+                </div>
             </div>            
         </div>
         <div class="icons">icons</div>
     </div>
-    <div class="advertisement">
-        <img id="c_adv_img"src="https://github.com/717276/Naver_Front/raw/main/img/news_img/container_adv.png" alt="container_">
-    </div>
     <div class="container">
         <div class="content">
+            <div class="advertisement">
+                <img id="c_adv_img"src="https://github.com/717276/Naver_Front/raw/main/img/news_img/container_adv.png" alt="container_">
+            </div>
             <div class="top">
                 <div class="news">
                     <div id="header_view">
@@ -106,8 +122,22 @@
         </div>
         <div class="aside">
             <div class="top">
-                <div class="login">login</div>
-                <div class="sub_adv">sub_adv</div>
+                <div class="login">
+                    <p id="login_comment">네이버를 더 안전하고 편리하게 이용하세요</p>
+                    <div id="login_banner">
+                        <img id="login_banner_img" src="https://github.com/717276/Naver_Front/raw/main/img/aside_img/login_banner.png" alt="login_banner.png">
+                    </div>
+                    <div class="login_main">
+                        <a id="find_id" href="">아이디 찾기</a>
+                        <a id="find_pw" href="">비밀번호 찾기</a>
+                        <a id="join" href="">회원가입</a>
+                    </div>
+                </div>
+                <div class="login_adv">
+                    <div id="login_adv_size">
+                        <img id="login_adv_img" src="https://github.com/717276/Naver_Front/raw/main/img/aside_img/login_adv.png" alt="">
+                    </div>
+                </div>
                 <div class="weather">weather</div>
                 <div class="stock">stock</div>
             </div>
