feat: update search_box, content, login details

--- a/naver_main.html
+++ b/naver_main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Naver</title>
 </head>
 <link rel="stylesheet" href="naver.css">
 <body>
@@ -30,27 +30,21 @@
             </div>
 
             <div id="search_form">
-                <div id="naver_icon">
-                    <img src="https://github.com/717276/Naver_Front/raw/main/img/header/naver.png" alt="">
-                </div>
+                <img id="naver_icon" src="https://github.com/717276/Naver_Front/raw/main/img/header/naver.png" alt="">
                 <div id="input_form">
                     <input id="input" type="text" placeholder="검색어 입력">
                 </div>
-                <div id="keyboard_img">
-                    <img src="https://github.com/717276/Naver_Front/raw/main/img/header/keyboard_icon.png" alt="">
-                </div>
-                <div id="reading_glass">
-                    <img src="https://github.com/717276/Naver_Front/raw/main/img/header/reading_glass.png" alt="">
-                </div>
+                <img id="keyboard_img" src="https://github.com/717276/Naver_Front/raw/main/img/header/keyboard_icon.png" alt="">    
+                <img id="reading_glass" src="https://github.com/717276/Naver_Front/raw/main/img/header/reading_glass.png" alt="">                
             </div>            
         </div>
         <div class="icons">icons</div>
     </div>
+    <div class="advertisement">
+        <img id="c_adv_img"src="https://github.com/717276/Naver_Front/raw/main/img/news_img/container_adv.png" alt="container_">
+    </div>
     <div class="container">
         <div class="content">
-            <div class="advertisement">
-                <img id="c_adv_img"src="https://github.com/717276/Naver_Front/raw/main/img/news_img/container_adv.png" alt="container_">
-            </div>
             <div class="top">
                 <div class="news">
                     <div id="header_view">
@@ -100,7 +94,7 @@
                             <div id="page_lt">
                                 <a href="" style="padding-right:10px">&lt;</a>
                             </div>
-                            <div id="page">언론사 더보기</div>
+                            <div id="page"><span style="color:#3a67ea">언론사</span> 더보기</div>
                             <a href="" style="padding-left:10px">&gt;</a>
                         </div>
                         <div id="btn">
@@ -134,9 +128,7 @@
                     </div>
                 </div>
                 <div class="login_adv">
-                    <div id="login_adv_size">
-                        <img id="login_adv_img" src="https://github.com/717276/Naver_Front/raw/main/img/aside_img/login_adv.png" alt="">
-                    </div>
+                    <img id="login_adv_img" src="https://github.com/717276/Naver_Front/raw/main/img/aside_img/login_adv.png" alt="">
                 </div>
                 <div class="weather">weather</div>
                 <div class="stock">stock</div>
