--- a/naver_main.html
+++ b/naver_main.html
@@ -74,8 +74,8 @@
                         </div>
                     </div>
                     <div id="header_subview">
-                        <div id="list_box" style="width: 10%;">
-                            <select name="subview_list_box">
+                        <div id="list_box" style="width: 12%;">
+                            <select name="subview_list_box" style="width:100%; height:100%;">
                                 <option disabled selected>분야별 뉴스</option>                                                                
                             </select>
                         </div>
@@ -83,7 +83,7 @@
                             <img id="sub_news_img" src="https://github.com/717276/Naver_Front/raw/main/img/news_img/sub_news.png" alt="sub_news_img">
                         </div>
                         <div id="news_home_btn" style="width: 10%;">
-                            <button>뉴스 홈</button>
+                            <button style="width: 100%; height: 100%;" >뉴스 홈</button>
                         </div>
                     </div>
                     <div id="media_view">
