create widget side 24.04.18

--- a/naver_main.html
+++ b/naver_main.html
@@ -134,7 +134,99 @@
                 <div class="stock">stock</div>
             </div>
             <div class="bottom">
-                <div class="widget">widget</div>            
+                <div class="widget">
+                    <div class="widget_calendar">
+                        <div class="today">
+                            <p><span style="font-weight: bold;">캘린더</span></p>
+                            <p><span style="font-weight: bold; font-size: 40px;">4.17&nbsp;</span>수</p>
+                            <p><span style="font-size: 12px;">일정이 없습니다.</span></p>
+                        </div>
+                        <div class="calendar">
+                            <div class="weekdays">
+                            <div class="weekend">일</div>
+                            <div class="day">월</div>
+                            <div class="day">화</div>
+                            <div class="day">수</div>
+                            <div class="day">목</div>
+                            <div class="day">금</div>
+                            <div class="day">토</div>
+                            </div>
+                            <div class="days">
+                            <div class="day before-month">31</div>
+                            <div class="day">1</div>
+                            <div class="day">2</div>
+                            <div class="day">3</div>
+                            <div class="day">4</div>
+                            <div class="day">5</div>
+                            <div class="day">6</div>
+                            <div class="weekend">7</div>
+                            <div class="day">8</div>
+                            <div class="day">9</div>
+                            <div class="weekend">10</div>
+                            <div class="day">11</div>
+                            <div class="day">12</div>
+                            <div class="day">13</div>
+                            <div class="weekend">14</div>
+                            <div class="day">15</div>
+                            <div class="day">16</div>
+                            <div class="day">17</div>
+                            <div class="day">18</div>
+                            <div class="day">19</div>
+                            <div class="day">20</div>
+                            <div class="weekend">21</div>
+                            <div class="day">22</div>
+                            <div class="day">23</div>
+                            <div class="day">24</div>
+                            <div class="day">25</div>
+                            <div class="day">26</div>
+                            <div class="day">27</div>
+                            <div class="weekend">28</div>
+                            <div class="day">29</div>
+                            <div class="day">30</div>
+                            <div class="day next-month">1</div>
+                            <div class="day next-month">2</div>
+                            <div class="day next-month">3</div>
+                            <div class="day next-month">4</div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="widget_memo">
+                        <div class="memo_title">메모</div>
+                        <div class="memo_content">네이버의 새로운 소셜홈</div>
+                        <div class="memo_content">네이버me 따라하기</div>
+                        <div class="memo_content">네이버톡으로 메모를 이용</div>
+                    </div>
+                    <br>
+                    <div class="widget_dictionary">
+                        <div class="widget_papago">
+                            <img src="./papago.PNG" style="width: 100px;">
+                        </div>
+                        <div class="widget_papago">
+                            <p><span style="font-weight: bold;">영어사전<br>
+                            Get out of your comfort zone</span></p>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="widget_vibe">
+                        <span style="font-weight: bold; font-size: 16px;"><i class="fa-solid fa-signal"></i>
+                        VIBE 행복에너지UP!</span>&nbsp;&nbsp;&nbsp;<span style="color: gray; font-size: 13px;">다른 추천 보기<i class="fa-solid fa-rotate-right"></i></span><br><br>
+                        <div class="vibe_img">
+                            <div class="img1">
+                            <img src="https://images.unsplash.com/photo-1713195959107-54c1db587872?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzNHx8fGVufDB8fHx8fA%3D%3D" style="width: 80px; height: 130px;">
+                            <span>여행의 시작과 끝이 공존하는...</span>
+                            </div>
+                            <div class="img2">
+                            <img src="https://images.unsplash.com/photo-1712841607084-3c8dabe07818?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5Mnx8fGVufDB8fHx8fA%3D%3D" style="width: 80px; height: 130px;">
+                            <span>여행의 시작과 끝이 공존하는...</span>    
+                            </div>
+                            <div class="img3">
+                            <img src="https://plus.unsplash.com/premium_photo-1683318596886-3ba591e65918?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMDd8fHxlbnwwfHx8fHw%3D" style="width: 80px; height: 130px;">
+                            <span>여행의 시작과 끝이 공존하는...</span>
+                            </div>
+                        </div>                            
+                    </div>
+                </div>            
             </div>
         </div>
     </div>
