[correction] edit footer frame

--- a/naver_main.html
+++ b/naver_main.html
@@ -330,18 +330,18 @@
                     </p>
                 </a>
             </div>
-            <hr />
+            <hr style="margin-left: 100px; margin-right: 100px" />
 
             <div class="footer_center">
                 <br />
-                <a style="float: left" href="https://www.naver.com/NOTICE">공지사항</a>
-                <a style="float: right" href="https://www.naver.com/more.html">서비스 전체보기</a>
+                <a style="margin-left: 105px; float: left" href="https://www.naver.com/NOTICE">공지사항</a>
+                <a style="float: right; margin-right: 110px" href="https://www.naver.com/more.html">서비스 전체보기</a>
 
                 <br /><br />
-                <hr />
+                <hr style="margin-left: 100px; margin-right: 100px" />
                 <br />
                 <div style="float: left">
-                    <b>Partners </b>
+                    <b style="margin-left: 105px">Partners </b>
                     <a href="https://www.navercorp.com/esg/projectFlower"> 프로젝트 꽃 </a> |
                     <a href="https://business.naver.com/">네이버 비즈니스</a> |
                     <a href="https://bizschool.naver.com/">네이버 비즈니스 스쿨</a> |
@@ -352,14 +352,14 @@
                     <br />
                     <br />
 
-                    <b>Developers</b>
+                    <b style="margin-left: 105px">Developers</b>
                     <a href="https://developers.naver.com/"> 네이버 개발자 센터 </a> |
                     <a href="https://developers.naver.com/docs/common/openapiguide/#/apilist.md"> 오픈 API </a> |
                     <a href="https://naver.github.io/"> 오픈 소스 </a> |
                     <a href="https://d2.naver.com/"> 네이버 D2 </a> | <a href="http://d2startup.com/">네이버 D2SF </a> |
                     <a href="https://www.naverlabs.com/">네이버 랩스 </a> |
                 </div>
-                <div class="right-box" style="display: flex; flex-direction: row">
+                <div class="right-box" style="display: flex; flex-direction: row; margin-right: 100px">
                     <div class="broswer_box">
                         <div class="left-box">
                             <p>웨일 브라우저</p>
@@ -368,7 +368,12 @@
                         </div>
                         <br />
                         <a class="right-box" href="http://whale.naver.com/"
-                            ><img width="50px" height="50px" src="source/whale broswer.png" alt=""
+                            ><img
+                                style="margin-left: 20px"
+                                width="50px"
+                                height="50px"
+                                src="source/whale broswer.png"
+                                alt=""
                         /></a>
                     </div>
 
@@ -380,7 +385,12 @@
                         </div>
 
                         <a class="right-box" href="http://whale.naver.com/"
-                            ><img width="50px" height="50px" src="source/naver_coportation.png" alt=""
+                            ><img
+                                style="margin-top: 20px"
+                                width="50px"
+                                height="50px"
+                                src="source/naver_coportation.png"
+                                alt=""
                         /></a>
                     </div>
                 </div>
@@ -388,7 +398,7 @@
             <br />
             <br /><br /><br /><br />
             <br />
-            <hr />
+            <hr style="margin-left: 100px; margin-right: 100px" />
             <br />
             <div style="text-align: center" class="footer_bottom">
                 <a href="https://www.navercorp.com/esg/projectFlower"> 회사소개 </a> |
